Fixed staff page so it isn't awful looking on smaller screens

--- a/staff.html
+++ b/staff.html
@@ -129,25 +129,28 @@
     <!-- End Navbar -->
 
     <div id="container" class="px-3">
-        <div class="row pt-5 text-center">
-            <h1>Church Staff</h1>
-        </div>
-      <div class="row d-flex justify-content-center align-items-center h-100 pt-3">
-        <div class="col">
+      <div class="row pt-5 text-center">
+        <h1>Church Staff</h1>
+      </div>
+      <!-- Start Staff Card -->
+      <div class="row d-flex justify-content-center align-items-center pt-3">
+        <div class="col-lg-12">
           <div class="card" style="border-radius: 15px">
             <div class="card-body p-4">
-              <div class="d-flex text-black">
-                <div class="flex-shrink-0">
+              <div
+                class="d-flex flex-column flex-lg-row text-center text-lg-start"
+              >
+                <div class="flex-shrink-0 mb-3 mb-lg-0">
                   <img
                     src="./images/PastorBeth2.jpg"
                     alt="Generic placeholder image"
-                    class="img-fluid"
-                    style="width: 180px; border-radius: 10px"
+                    class="img-fluid profile-img"
                   />
                 </div>
-                <div class="flex-grow-1 ms-3 overflow-auto">
+                <div class="flex-grow-1 ms-lg-3 overflow-auto">
                   <h5 class="mb-1">Rev. Beth Harbaugh</h5>
-                  <br class="mb-2 pb-1" style="color: #2b2a2a">
+                  <br />
+                  <p class="mb-0" style="color: #2b2a2a">
                     Rev. Beth leads the congregation in weekly worship and
                     provides pastoral care and administration.<br /><br />Contact
                     her at 319-540-1644 or bethmaryharbaugh@gmail.com
@@ -158,163 +161,178 @@
           </div>
         </div>
       </div>
-
-      <div class="row d-flex justify-content-center align-items-center h-100 pt-3">
-        <div class="col">
-            <div class="card" style="border-radius: 15px">
-              <div class="card-body p-4">
-                <div class="d-flex text-black">
-                  <div class="flex-shrink-0">
-                    <img
-                      src="./images/JAM_logo.png"
-                      alt="Generic placeholder image"
-                      class="img-fluid"
-                      style="width: 180px; border-radius: 10px"
-                    />
-                  </div>
-                  <div class="flex-grow-1 ms-3">
-                    <h5 class="mb-1">Miss Courtney</h5>
-                    <br class="mb-2 pb-1" style="color: #2b2a2a">
+      <!-- End Staff Card -->
+      <!-- Start Staff Card -->
+      <div class="row d-flex justify-content-center align-items-center pt-3">
+        <div class="col-lg-12">
+          <div class="card" style="border-radius: 15px">
+            <div class="card-body p-4">
+              <div
+                class="d-flex flex-column flex-lg-row text-center text-lg-start"
+              >
+                <div class="flex-shrink-0 mb-3 mb-lg-0">
+                  <img
+                    src="./images/JAM_logo.png"
+                    alt="Generic placeholder image"
+                    class="img-fluid profile-img"
+                  />
+                </div>
+                <div class="flex-grow-1 ms-lg-3 overflow-auto">
+                  <h5 class="mb-1">Miss Courtney</h5>
+                  <br />
+                  <p class="mb-0" style="color: #2b2a2a">
                     Courtney is our Children's Ministries Director.
-                    </p>
-                  </div>
+                  </p>
                 </div>
               </div>
             </div>
           </div>
-
+        </div>
       </div>
-
-      <div class="row d-flex justify-content-center align-items-center h-100 pt-3">
-        <div class="col">
-            <div class="card" style="border-radius: 15px">
-              <div class="card-body p-4">
-                <div class="d-flex text-black">
-                  <div class="flex-shrink-0">
-                    <img
-                      src="./images/JessJaspers.jpg"
-                      alt="Generic placeholder image"
-                      class="img-fluid"
-                      style="width: 180px; border-radius: 10px"
-                    />
-                  </div>
-                  <div class="flex-grow-1 ms-3">
-                    <h5 class="mb-1">Jess Jaspers</h5>
-                    <br class="mb-2 pb-1" style="color: #2b2a2a">
+      <!-- End Staff Card -->
+      <!-- Start Staff Card -->
+      <div class="row d-flex justify-content-center align-items-center pt-3">
+        <div class="col-lg-12">
+          <div class="card" style="border-radius: 15px">
+            <div class="card-body p-4">
+              <div
+                class="d-flex flex-column flex-lg-row text-center text-lg-start"
+              >
+                <div class="flex-shrink-0 mb-3 mb-lg-0">
+                  <img
+                    src="./images/JessJaspers.jpg"
+                    alt="Generic placeholder image"
+                    class="img-fluid profile-img"
+                  />
+                </div>
+                <div class="flex-grow-1 ms-lg-3 overflow-auto">
+                  <h5 class="mb-1">Jess Jaspers</h5>
+                  <br />
+                  <p class="mb-0" style="color: #2b2a2a">
                     Jess is the Kids Care Director.
-                    </p>
-                  </div>
+                  </p>
                 </div>
               </div>
             </div>
           </div>
-
+        </div>
       </div>
-
-      <div class="row d-flex justify-content-center align-items-center h-100 pt-3">
-        <div class="col">
-            <div class="card" style="border-radius: 15px">
-              <div class="card-body p-4">
-                <div class="d-flex text-black">
-                  <div class="flex-shrink-0">
-                    <img
-                      src="./images/Shirlee.jpg"
-                      alt="Generic placeholder image"
-                      class="img-fluid"
-                      style="width: 180px; border-radius: 10px"
-                    />
-                  </div>
-                  <div class="flex-grow-1 ms-3">
-                    <h5 class="mb-1">Shirlee Cagle</h5>
-                    <br class="mb-2 pb-1" style="color: #2b2a2a">
+      <!-- End Staff Card -->
+      <!-- Start Staff Card -->
+      <div class="row d-flex justify-content-center align-items-center pt-3">
+        <div class="col-lg-12">
+          <div class="card" style="border-radius: 15px">
+            <div class="card-body p-4">
+              <div
+                class="d-flex flex-column flex-lg-row text-center text-lg-start"
+              >
+                <div class="flex-shrink-0 mb-3 mb-lg-0">
+                  <img
+                    src="./images/Shirlee.jpg"
+                    alt="Generic placeholder image"
+                    class="img-fluid profile-img"
+                  />
+                </div>
+                <div class="flex-grow-1 ms-lg-3 overflow-auto">
+                  <h5 class="mb-1">Shirlee Cagle</h5>
+                  <br />
+                  <p class="mb-0" style="color: #2b2a2a">
                     Shirlee is our Administrative Assistant.
-                    </p>
-                  </div>
+                  </p>
                 </div>
               </div>
             </div>
           </div>
-
+        </div>
       </div>
-
-      <div class="row d-flex justify-content-center align-items-center h-100 pt-3">
-        <div class="col">
-            <div class="card" style="border-radius: 15px">
-              <div class="card-body p-4">
-                <div class="d-flex text-black">
-                  <div class="flex-shrink-0">
-                    <img
-                      src="./images/MikeCooper.jpg"
-                      alt="Generic placeholder image"
-                      class="img-fluid"
-                      style="width: 180px; border-radius: 10px"
-                    />
-                  </div>
-                  <div class="flex-grow-1 ms-3">
-                    <h5 class="mb-1">Mike Cooper</h5>
-                    <br class="mb-2 pb-1" style="color: #2b2a2a">
+      <!-- End Staff Card -->
+      <!-- Start Staff Card -->
+      <div class="row d-flex justify-content-center align-items-center pt-3">
+        <div class="col-lg-12">
+          <div class="card" style="border-radius: 15px">
+            <div class="card-body p-4">
+              <div
+                class="d-flex flex-column flex-lg-row text-center text-lg-start"
+              >
+                <div class="flex-shrink-0 mb-3 mb-lg-0">
+                  <img
+                    src="./images/MikeCooper.jpg"
+                    alt="Generic placeholder image"
+                    class="img-fluid profile-img"
+                  />
+                </div>
+                <div class="flex-grow-1 ms-lg-3 overflow-auto">
+                  <h5 class="mb-1">Mike Cooper</h5>
+                  <br />
+                  <p class="mb-0" style="color: #2b2a2a">
                     Mike is our Organist and Choir Director.
-                    </p>
-                  </div>
+                  </p>
                 </div>
               </div>
             </div>
           </div>
-          </div>
-
-          <div class="row d-flex justify-content-center align-items-center h-100 pt-3">
-            <div class="col">
-                <div class="card" style="border-radius: 15px">
-                  <div class="card-body p-4">
-                    <div class="d-flex text-black">
-                      <div class="flex-shrink-0">
-                        <img
-                          src="./images/MelLaake.jpg"
-                          alt="Generic placeholder image"
-                          class="img-fluid"
-                          style="width: 180px; border-radius: 10px"
-                        />
-                      </div>
-                      <div class="flex-grow-1 ms-3">
-                        <h5 class="mb-1">Melody Laake</h5>
-                        <br class="mb-2 pb-1" style="color: #2b2a2a">
-                        Melody is our Pianist.
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
+        </div>
       </div>
-      <div class="row d-flex justify-content-center align-items-center h-100 pt-3">
-        <div class="col">
-            <div class="card" style="border-radius: 15px">
-              <div class="card-body p-4">
-                <div class="d-flex text-black">
-                  <div class="flex-shrink-0">
-                    <img
-                      src="./images/cleaning.jpg"
-                      alt="Generic placeholder image"
-                      class="img-fluid"
-                      style="width: 180px; border-radius: 10px"
-                    />
-                  </div>
-                  <div class="flex-grow-1 ms-3">
-                    <h5 class="mb-1">Hoppes family</h5>
-                    <br class="mb-2 pb-1" style="color: #2b2a2a">
-                    The Hoppes family handles the janitorial duties for our church.
-
-                    </p>
-                  </div>
+      <!-- End Staff Card -->
+      <!-- Start Staff Card -->
+      <div class="row d-flex justify-content-center align-items-center pt-3">
+        <div class="col-lg-12">
+          <div class="card" style="border-radius: 15px">
+            <div class="card-body p-4">
+              <div
+                class="d-flex flex-column flex-lg-row text-center text-lg-start"
+              >
+                <div class="flex-shrink-0 mb-3 mb-lg-0">
+                  <img
+                    src="./images/MelLaake.jpg"
+                    alt="Generic placeholder image"
+                    class="img-fluid profile-img"
+                  />
+                </div>
+                <div class="flex-grow-1 ms-lg-3 overflow-auto">
+                  <h5 class="mb-1">Melody Laake</h5>
+                  <br />
+                  <p class="mb-0" style="color: #2b2a2a">
+                    Melody is our Pianist.
+                  </p>
                 </div>
               </div>
             </div>
           </div>
-  </div>
+        </div>
+      </div>
+      <!-- End Staff Card -->
+      <!-- Start Staff Card -->
+      <div class="row d-flex justify-content-center align-items-center pt-3">
+        <div class="col-lg-12">
+          <div class="card" style="border-radius: 15px">
+            <div class="card-body p-4">
+              <div
+                class="d-flex flex-column flex-lg-row text-center text-lg-start"
+              >
+                <div class="flex-shrink-0 mb-3 mb-lg-0">
+                  <img
+                    src="./images/cleaning.jpg"
+                    alt="Generic placeholder image"
+                    class="img-fluid profile-img"
+                  />
+                </div>
+                <div class="flex-grow-1 ms-lg-3 overflow-auto">
+                  <h5 class="mb-1">Hoppes family</h5>
+                  <br />
+                  <p class="mb-0" style="color: #2b2a2a">
+                    The Hoppes family handles the janitorial duties for our
+                    church.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End Staff Card -->
     </div>
 
-      
     <!-- Start Footer -->
     <div id="container" class="mb-3 rounded-bottom-5">
       <footer class="pt-5">
