--- a/photos.html
+++ b/photos.html
@@ -17,13 +17,13 @@
     <!-- End Stylesheets -->
   </head>
   <body>
- <!-- Banner -->
- <div id="container" class="mt-3 rounded-top-5">
-  <img class="w-100 rounded-top-5" src="./images/websitebanner.jpg" />
-</div>
-<!-- End Banner -->
+    <!-- Banner -->
+    <div class="mt-sm-0 mt-md-3 mt-lg-3 container mx-auto p-0">
+      <img class="w-100" src="./images/websitebanner.jpg" />
+    </div>
+    <!-- End Banner -->
     <!-- Navbar -->
-    <div id="container">
+    <div class="container mx-auto p-0">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow">
         <button
           class="navbar-toggler"
@@ -128,46 +128,55 @@
     </div>
     <!-- End Navbar -->
 
-    <div id="container" class="px-3">
-        <div class="row pt-5 mx-auto text-center">
-            <h2>Days in the Life of the Church</h2>
-        </div>
-        <div class="row  mx-auto text-center pt-3">
-            <hr/>
-            <img src="./images//Highlights2023-1.jpg" alt="photos of the church at worship, in service, and at Wednesday night's kids time">
-        </div>
-        <div class="row  mx-auto text-center pt-3">
-            <img src="./images/Highlights2023-2.jpg" alt="photos of children having fun at Vacation Bible School and with their backpacks at a blessing">
-        </div>
-        <div class="row  mx-auto text-center pt-3">
-            <img src="./images/Highlights2023-3.jpg" alt="photos of the church in fellowship, serving food and eating together; photos of singing at worship and in rehearsal">
-        </div>
-            </div>
+    <div class="px-3 mx-auto container bg">
+      <div class="row pt-5 mx-auto text-center">
+        <h2>Days in the Life of the Church</h2>
+      </div>
+      <div class="row mx-auto text-center pt-3">
+        <hr />
+        <img
+          src="./images//Highlights2023-1.jpg"
+          alt="photos of the church at worship, in service, and at Wednesday night's kids time"
+        />
+      </div>
+      <div class="row mx-auto text-center pt-3">
+        <img
+          src="./images/Highlights2023-2.jpg"
+          alt="photos of children having fun at Vacation Bible School and with their backpacks at a blessing"
+        />
+      </div>
+      <div class="row mx-auto text-center pt-3">
+        <img
+          src="./images/Highlights2023-3.jpg"
+          alt="photos of the church in fellowship, serving food and eating together; photos of singing at worship and in rehearsal"
+        />
+      </div>
+    </div>
 
+    <!-- Start Footer -->
+    <footer class="pt-5 mb-sm-0 mb-md-3 mb-lg-3 container mx-auto p-0 bg">
+      <!-- Footer row -->
+      <div class="row mx-auto bg-dark shadow text-white">
+        <!-- Left column for copyright information -->
+        <div class="col-lg-10 mt-2 align-self-center">
+          <!-- Copyright information and UMC logo -->
+          <p>
+            <img height="60" width="60" src="./images/white+umc+logo.png" /> ©
+            2024 - Van Meter United Methodist Church. All rights reserved.
+          </p>
+        </div>
+        <!-- Right column for social media links -->
+        <div class="col-lg-2 mt-2 mb-2 text-center align-self-center">
+          <!-- Social media link -->
+          <p>
+            Stay Connected
+            <a href="https://www.facebook.com/profile.php?id=100064317144537"
+              ><img height="35" width="35" src="./images/facebook.png"
+            /></a>
+          </p>
+        </div>
       </div>
-    </div>
-    </div>
- <!-- Start Footer -->
- <div id="container" class="mb-3 rounded-bottom-5">
-  <footer class="pt-5">
-    <div class="row mx-auto bg-dark shadow text-white rounded-bottom-5">
-      <div class="col-lg-10 mt-2 align-self-center">
-        <p>
-          <img height="60" width="60" src="./images/white+umc+logo.png" /> ©
-          2024 - Van Meter United Methodist Church. All rights reserved.
-        </p>
-      </div>
-      <div class="col-lg-2 mt-2 mb-2 text-center align-self-center">
-        <p>
-          Stay Connected
-          <a href="https://www.facebook.com/profile.php?id=100064317144537"
-            ><img height="35" width="35" src="./images/facebook.png"
-          /></a>
-        </p>
-      </div>
-    </div>
-  </footer>
-</div>
-<!-- End Footer -->
+    </footer>
+    <!-- End Footer -->
   </body>
 </html>
