--- a/prayer-request.html
+++ b/prayer-request.html
@@ -18,12 +18,12 @@
   </head>
   <body>
     <!-- Banner -->
-    <div id="container" class="mt-3 rounded-top-5">
-      <img class="w-100 rounded-top-5" src="./images/websitebanner.jpg" />
+    <div class="mt-sm-0 mt-md-3 mt-lg-3 container mx-auto p-0">
+      <img class="w-100" src="./images/websitebanner.jpg" />
     </div>
     <!-- End Banner -->
     <!-- Navbar -->
-    <div id="container">
+    <div class="container mx-auto p-0">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow">
         <button
           class="navbar-toggler"
@@ -128,7 +128,7 @@
     </div>
     <!-- End Navbar -->
 
-    <div id="container" class="px-3 text-center">
+    <div class="px-3 text-center container mx-auto bg">
       <div class="row mx-auto text-center pt-5">
         <h2>Prayer Request Form</h2>
       </div>
@@ -199,26 +199,29 @@
       </form>
     </div>
     <!-- Start Footer -->
-    <div id="container" class="mb-3 rounded-bottom-5">
-      <footer class="pt-5">
-        <div class="row mx-auto bg-dark shadow text-white rounded-bottom-5">
-          <div class="col-lg-10 mt-2 align-self-center">
-            <p>
-              <img height="60" width="60" src="./images/white+umc+logo.png" /> ©
-              2024 - Van Meter United Methodist Church. All rights reserved.
-            </p>
-          </div>
-          <div class="col-lg-2 mt-2 mb-2 text-center align-self-center">
-            <p>
-              Stay Connected
-              <a href="https://www.facebook.com/profile.php?id=100064317144537"
-                ><img height="35" width="35" src="./images/facebook.png"
-              /></a>
-            </p>
-          </div>
+    <footer class="pt-5 mb-sm-0 mb-md-3 mb-lg-3 container mx-auto p-0 bg">
+      <!-- Footer row -->
+      <div class="row mx-auto bg-dark shadow text-white">
+        <!-- Left column for copyright information -->
+        <div class="col-lg-10 mt-2 align-self-center">
+          <!-- Copyright information and UMC logo -->
+          <p>
+            <img height="60" width="60" src="./images/white+umc+logo.png" /> ©
+            2024 - Van Meter United Methodist Church. All rights reserved.
+          </p>
         </div>
-      </footer>
-    </div>
+        <!-- Right column for social media links -->
+        <div class="col-lg-2 mt-2 mb-2 text-center align-self-center">
+          <!-- Social media link -->
+          <p>
+            Stay Connected
+            <a href="https://www.facebook.com/profile.php?id=100064317144537"
+              ><img height="35" width="35" src="./images/facebook.png"
+            /></a>
+          </p>
+        </div>
+      </div>
+    </footer>
     <!-- End Footer -->
   </body>
 </html>
