--- a/publications.html
+++ b/publications.html
@@ -17,13 +17,13 @@
     <!-- End Stylesheets -->
   </head>
   <body>
- <!-- Banner -->
- <div id="container" class="mt-3 rounded-top-5">
-    <img class="w-100 rounded-top-5" src="./images/websitebanner.jpg" />
-  </div>
-  <!-- End Banner -->
+    <!-- Banner -->
+    <div class="mt-sm-0 mt-md-3 mt-lg-3 container mx-auto p-0">
+      <img class="w-100" src="./images/websitebanner.jpg" />
+    </div>
+    <!-- End Banner -->
     <!-- Navbar -->
-    <div id="container">
+    <div class="container mx-auto p-0">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow">
         <button
           class="navbar-toggler"
@@ -128,24 +128,23 @@
     </div>
     <!-- End Navbar -->
 
-    <div id="container" class="px-3">
-        <div class="row mx-auto text-center pt-5">
-            <h2>Church Publications</h2>
-            <hr/>
-        </div>
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 mx-auto justify-content-center">
+    <div class="px-3 container mx-auto bg">
+      <div class="row mx-auto text-center pt-5">
+        <h2>Church Publications</h2>
+        <hr />
+      </div>
+      <div
+        class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 mx-auto justify-content-center"
+      >
         <div class="col">
           <div class="card shadow-sm bg-dark text-white">
             <img
               class="bd-placeholder-img card-img-top"
               width="100%"
               src="./images/vanmeterbulletinimage.jpg"
-            >
-            </img>
+            />
             <div class="card-body">
-              <p class="card-text">
-                Van Meter Church Bulletin
-              </p>
+              <p class="card-text">Van Meter Church Bulletin</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button
@@ -162,190 +161,173 @@
         </div>
 
         <div class="col">
-            <div class="card shadow-sm bg-dark text-white">
-              <img
-                class="bd-placeholder-img card-img-top"
-                width="100%"
-                src="./images/BibleVerses.jpg"
-              >
-              </img>
-              <div class="card-body">
-                <p class="card-text">
-                Bible Verses for the week
-                </p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <button
-                      type="button"
-                      class="btn btn-sm btn-outline-secondary"
-                      onclick="window.location.href='https://www.vmumc.org/Publications/LiturgyThisWeek.pdf';"
-                    >
-                      View
-                    </button>
-                  </div>
+          <div class="card shadow-sm bg-dark text-white">
+            <img
+              class="bd-placeholder-img card-img-top"
+              width="100%"
+              src="./images/BibleVerses.jpg"
+            />
+            <div class="card-body">
+              <p class="card-text">Bible Verses for the week</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button
+                    type="button"
+                    class="btn btn-sm btn-outline-secondary"
+                    onclick="window.location.href='https://www.vmumc.org/Publications/LiturgyThisWeek.pdf';"
+                  >
+                    View
+                  </button>
                 </div>
               </div>
             </div>
           </div>
+        </div>
 
-          <div class="col">
-            <div class="card shadow-sm bg-dark text-white">
-              <img
-                class="bd-placeholder-img card-img-top"
-                width="100%"
-                src="./images/newsletterimage.jpg"
-              >
-              </img>
-              <div class="card-body">
-                <p class="card-text">
-                The Van Meter Newsletter
-                </p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <button
-                      type="button"
-                      class="btn btn-sm btn-outline-secondary"
-                      onclick="window.location.href='https://www.vmumc.org/Publications/churchnewsletter.pdf';"
-                    >
-                      View
-                    </button>
-                  </div>
+        <div class="col">
+          <div class="card shadow-sm bg-dark text-white">
+            <img
+              class="bd-placeholder-img card-img-top"
+              width="100%"
+              src="./images/newsletterimage.jpg"
+            />
+            <div class="card-body">
+              <p class="card-text">The Van Meter Newsletter</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button
+                    type="button"
+                    class="btn btn-sm btn-outline-secondary"
+                    onclick="window.location.href='https://www.vmumc.org/Publications/churchnewsletter.pdf';"
+                  >
+                    View
+                  </button>
                 </div>
               </div>
             </div>
           </div>
+        </div>
 
-          <div class="col">
-            <div class="card shadow-sm bg-dark text-white">
-              <img
-                class="bd-placeholder-img card-img-top"
-                width="100%"
-                src="./images/GrapevineIcon.jpg"
-              >
-              </img>
-              <div class="card-body">
-                <p class="card-text">
-                Our Sunday news bulletin
-                </p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <button
-                      type="button"
-                      class="btn btn-sm btn-outline-secondary"
-                      onclick="window.location.href='https://www.vmumc.org/Publications/VMgrapevine.pdf';"
-                    >
-                      View
-                    </button>
-                  </div>
+        <div class="col">
+          <div class="card shadow-sm bg-dark text-white">
+            <img
+              class="bd-placeholder-img card-img-top"
+              width="100%"
+              src="./images/GrapevineIcon.jpg"
+            />
+            <div class="card-body">
+              <p class="card-text">Our Sunday news bulletin</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button
+                    type="button"
+                    class="btn btn-sm btn-outline-secondary"
+                    onclick="window.location.href='https://www.vmumc.org/Publications/VMgrapevine.pdf';"
+                  >
+                    View
+                  </button>
                 </div>
               </div>
             </div>
           </div>
+        </div>
 
-          <div class="col">
-            <div class="card shadow-sm bg-dark text-white">
-              <img
-                class="bd-placeholder-img card-img-top"
-                width="100%"
-                src="./images/devotionUpperRoom.jpg"
-              >
-              </img>
-              <div class="card-body">
-                <p class="card-text">
-                Daily Devotions: The Upper Room
-                </p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <button
-                      type="button"
-                      class="btn btn-sm btn-outline-secondary"
-                      onclick="window.location.href='https://www.upperroom.org/devotionals';"
-                    >
-                      View
-                    </button>
-                  </div>
+        <div class="col">
+          <div class="card shadow-sm bg-dark text-white">
+            <img
+              class="bd-placeholder-img card-img-top"
+              width="100%"
+              src="./images/devotionUpperRoom.jpg"
+            />
+            <div class="card-body">
+              <p class="card-text">Daily Devotions: The Upper Room</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button
+                    type="button"
+                    class="btn btn-sm btn-outline-secondary"
+                    onclick="window.location.href='https://www.upperroom.org/devotionals';"
+                  >
+                    View
+                  </button>
                 </div>
               </div>
             </div>
           </div>
+        </div>
 
-          
-          <div class="col">
-            <div class="card shadow-sm bg-dark text-white">
-              <img
-                class="bd-placeholder-img card-img-top"
-                width="100%"
-                src="./images/devotion365.jpg"
-              >
-              </img>
-              <div class="card-body">
-                <p class="card-text">
-                d365: Devotionals 365 days a year
-                </p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group mt-auto">
-                    <button
-                      type="button"
-                      class="btn btn-sm btn-outline-secondary"
-                      onclick="window.location.href='https://d365.org/';"
-                    >
-                      View
-                    </button>
-                  </div>
+        <div class="col">
+          <div class="card shadow-sm bg-dark text-white">
+            <img
+              class="bd-placeholder-img card-img-top"
+              width="100%"
+              src="./images/devotion365.jpg"
+            />
+            <div class="card-body">
+              <p class="card-text">d365: Devotionals 365 days a year</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group mt-auto">
+                  <button
+                    type="button"
+                    class="btn btn-sm btn-outline-secondary"
+                    onclick="window.location.href='https://d365.org/';"
+                  >
+                    View
+                  </button>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-6">
-            <div class="card shadow-sm bg-dark text-white">
-              <img
-                class="bd-placeholder-img card-img-top"
-                width="100%"
-                src="http://media.salemwebnetwork.com/biblestudytools3/theme/default//master-banner-logo.png"
-              >
-              </img>
-              <div class="card-body">
-                <p class="card-text">
-                Online Bible and Study Tools
-                </p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group mt-auto">
-                    <button
-                      type="button"
-                      class="btn btn-sm btn-outline-secondary"
-                      onclick="window.location.href='http://www.biblestudytools.com/';"
-                    >
-                      View
-                    </button>
-                  </div>
+        </div>
+        <div class="col-12 col-md-6">
+          <div class="card shadow-sm bg-dark text-white">
+            <img
+              class="bd-placeholder-img card-img-top"
+              width="100%"
+              src="http://media.salemwebnetwork.com/biblestudytools3/theme/default//master-banner-logo.png"
+            />
+            <div class="card-body">
+              <p class="card-text">Online Bible and Study Tools</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group mt-auto">
+                  <button
+                    type="button"
+                    class="btn btn-sm btn-outline-secondary"
+                    onclick="window.location.href='http://www.biblestudytools.com/';"
+                  >
+                    View
+                  </button>
                 </div>
               </div>
             </div>
           </div>
-          </div>
+        </div>
       </div>
     </div>
- <!-- Start Footer -->
- <div id="container" class="mb-3 rounded-bottom-5">
-  <footer class="pt-5">
-    <div class="row mx-auto bg-dark shadow text-white rounded-bottom-5">
-      <div class="col-lg-10 mt-2 align-self-center">
-        <p>
-          <img height="60" width="60" src="./images/white+umc+logo.png" /> ©
-          2024 - Van Meter United Methodist Church. All rights reserved.
-        </p>
+    <!-- Start Footer -->
+    <footer class="pt-5 mb-sm-0 mb-md-3 mb-lg-3 container mx-auto p-0 bg">
+      <!-- Footer row -->
+      <div class="row mx-auto bg-dark shadow text-white">
+        <!-- Left column for copyright information -->
+        <div class="col-lg-10 mt-2 align-self-center">
+          <!-- Copyright information and UMC logo -->
+          <p>
+            <img height="60" width="60" src="./images/white+umc+logo.png" /> ©
+            2024 - Van Meter United Methodist Church. All rights reserved.
+          </p>
+        </div>
+        <!-- Right column for social media links -->
+        <div class="col-lg-2 mt-2 mb-2 text-center align-self-center">
+          <!-- Social media link -->
+          <p>
+            Stay Connected
+            <a href="https://www.facebook.com/profile.php?id=100064317144537"
+              ><img height="35" width="35" src="./images/facebook.png"
+            /></a>
+          </p>
+        </div>
       </div>
-      <div class="col-lg-2 mt-2 mb-2 text-center align-self-center">
-        <p>
-          Stay Connected
-          <a href="https://www.facebook.com/profile.php?id=100064317144537"
-            ><img height="35" width="35" src="./images/facebook.png"
-          /></a>
-        </p>
-      </div>
-    </div>
-  </footer>
-</div>
-<!-- End Footer -->
+    </footer>
+    <!-- End Footer -->
   </body>
 </html>
