--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
             <a href="https://www.signupgenius.com/go/4090D4BA4A82EA3FD0-worship"
               >this link</a
             >
-            to select a date.
+            or just talk to Leslie Herman.
           </p>
         </div>
         <!-- Column with width 3 for image -->
