--- a/kidsCare.html
+++ b/kidsCare.html
@@ -224,7 +224,7 @@
         <hr />
         <strong>Statement of Purpose</strong>
 
-        <ul>
+        <ul class="overflow-auto">
           <li>
             Kids Care is a not-for-profit DHS licensed childcare center for
             elementary-age students.
