Improve footer responsiveness

--- a/kidsCare.html
+++ b/kidsCare.html
@@ -224,7 +224,7 @@
         <hr />
         <strong>Statement of Purpose</strong>
 
-        <ul class="overflow-auto">
+        <ul class="ms-3">
           <li>
             Kids Care is a not-for-profit DHS licensed childcare center for
             elementary-age students.
@@ -256,7 +256,7 @@
         <p>
           <strong>Kids Care Schedule</strong>
         </p>
-        <ul>
+        <ul class="ms-3">
           <li><strong>School year hours</strong> are</li>
         </ul>
         <p>
@@ -285,7 +285,7 @@
         </p>
       </div>
       <div class="row mx-auto">
-        <ul>
+        <ul class="ms-3">
           <li>
             We are closed on all major holidays: part of Christmas break,
             Memorial Day, July 3-4, Labor Day, Thanksgiving &amp; the day after,
@@ -334,12 +334,12 @@
         </p>
       </div>
       <div class="row text-center mx-auto">
-        <h2>Director: Jess Jaspers</h2>
+        <h3>Director: Jess Jaspers</h3>
         <div class="col-lg-6">
-          <h2>Phone: 491-1198</h2>
+          <h3>Phone: 491-1198</h3>
         </div>
         <div class="col-lg-6">
-          <h2>Email: Kidscare@vmumc.com</h2>
+          <h3>Email: Kidscare@vmumc.com</h3>
         </div>
       </div>
     </div>
@@ -347,23 +347,32 @@
     <footer class="pt-5 mb-sm-0 mb-md-3 mb-lg-3 container mx-auto p-0 bg">
       <!-- Footer row -->
       <div class="row mx-auto bg-dark shadow text-white">
-        <!-- Left column for copyright information -->
-        <div class="col-lg-10 mt-2 align-self-center">
-          <!-- Copyright information and UMC logo -->
+        <!-- Left column for UMC logo -->
+        <div
+          class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center"
+        >
+          <img height="60" width="60" src="./images/white+umc+logo.png" />
+        </div>
+        <!-- Center column for copyright information -->
+        <div
+          class="col-lg-8 col-md-10 col-sm-12 mt-2 align-self-center text-center text-md-start"
+        >
           <p>
-            <img height="60" width="60" src="./images/white+umc+logo.png" /> ©
-            2024 - Van Meter United Methodist Church. All rights reserved.
+            &copy; 2024 - Van Meter United Methodist Church. All rights
+            reserved.
           </p>
         </div>
         <!-- Right column for social media links -->
-        <div class="col-lg-2 mt-2 mb-2 text-center align-self-center">
+        <div class="col-lg-2 mt-2 text-center align-self-center text-lg-end">
+          <p>Stay Connected</p>
+        </div>
+        <div
+          class="col-lg-1 mt-2 ps-lg-0 mb-2 text-center text-lg-start align-self-center"
+        >
           <!-- Social media link -->
-          <p>
-            Stay Connected
-            <a href="https://www.facebook.com/profile.php?id=100064317144537"
-              ><img height="35" width="35" src="./images/facebook.png"
-            /></a>
-          </p>
+          <a href="https://www.facebook.com/profile.php?id=100064317144537"
+            ><img height="35" width="35" src="./images/facebook.png"
+          /></a>
         </div>
       </div>
     </footer>
