--- a/worship.html
+++ b/worship.html
@@ -261,23 +261,32 @@
     <footer class="pt-5 mb-sm-0 mb-md-3 mb-lg-3 container mx-auto p-0 bg">
       <!-- Footer row -->
       <div class="row mx-auto bg-dark shadow text-white">
-        <!-- Left column for copyright information -->
-        <div class="col-lg-10 mt-2 align-self-center">
-          <!-- Copyright information and UMC logo -->
+        <!-- Left column for UMC logo -->
+        <div
+          class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center"
+        >
+          <img height="60" width="60" src="./images/white+umc+logo.png" />
+        </div>
+        <!-- Center column for copyright information -->
+        <div
+          class="col-lg-8 col-md-10 col-sm-12 mt-2 align-self-center text-center text-md-start"
+        >
           <p>
-            <img height="60" width="60" src="./images/white+umc+logo.png" /> ©
-            2024 - Van Meter United Methodist Church. All rights reserved.
+            &copy; 2024 - Van Meter United Methodist Church. All rights
+            reserved.
           </p>
         </div>
         <!-- Right column for social media links -->
-        <div class="col-lg-2 mt-2 mb-2 text-center align-self-center">
+        <div class="col-lg-2 mt-2 text-center align-self-center text-lg-end">
+          <p>Stay Connected</p>
+        </div>
+        <div
+          class="col-lg-1 mt-2 ps-lg-0 mb-2 text-center text-lg-start align-self-center"
+        >
           <!-- Social media link -->
-          <p>
-            Stay Connected
-            <a href="https://www.facebook.com/profile.php?id=100064317144537"
-              ><img height="35" width="35" src="./images/facebook.png"
-            /></a>
-          </p>
+          <a href="https://www.facebook.com/profile.php?id=100064317144537"
+            ><img height="35" width="35" src="./images/facebook.png"
+          /></a>
         </div>
       </div>
     </footer>
