Finished All Navbar Pages

--- a/kidsCare.html
+++ b/kidsCare.html
@@ -129,10 +129,10 @@
     </div>
     <!-- End Navbar -->
     <div class="container bg pt-5 mx-auto">
-      <div class="row mx-auto">
+      <div class="row mx-auto text-center">
         <h1>Welcome to Van Meter United Methodist Kids Care</h1>
       </div>
-      <div class="row mx-auto">
+      <div class="row mx-auto text-center">
         <div class="col-lg-4">
           <strong>Director: Jess Jaspers</strong>
         </div>
@@ -220,7 +220,7 @@
         </div>
       </div>
 
-      <div class="row mx-auto">
+      <div class="row mx-auto pt-4">
         <hr />
         <strong>Statement of Purpose</strong>
 
