--- a/services.html
+++ b/services.html
@@ -128,87 +128,31 @@
     </div>
     <!-- End Navbar -->
 
-    <div class="px-3 text-center container mx-auto bg">
-      <div class="row mx-auto text-center pt-5">
-        <h1>Information Request Form</h1>
+    <div class="px-3 mx-auto container bg">
+      <div class="row pt-5 mx-auto text-center">
+        <h1>Worship with us this Sunday!</h1>
       </div>
-
-      <hr />
-      <form
-        enctype="multipart/form-data"
-        method="post"
-        action="http://www.response-o-matic.com/mail.php"
-        accept-charset="UTF-8"
-      >
-        <div>
-          <input
-            type="hidden"
-            name="acctid"
-            id="acctid"
-            value="u7p9qzi9dh3ql0yy"
-          />
-          <input type="hidden" name="formid" id="formid" value="799931" />
-          <input
-            type="hidden"
-            name="required_vars"
-            id="required_vars"
-            value="name,field-4be9134b3734056,field-96b2c9af1499026,field-469dd9a5020b020"
-          />
+      <div class="row text-center pt-3 mx-auto">
+        <div class="col">
+          <img class="w-50" src="./images/congregation.jpg" />
         </div>
-        <div class="form-floating mb-3">
-          <input
-            type="text"
-            class="form-control"
-            id="name"
-            placeholder="Name"
-          />
-          <label for="name">Name</label>
+      </div>
+      <div class="row text-center pt-3 mx-auto">
+        <div class="col">
+          <strong>Worship Service 10:45 AM</strong>
         </div>
-        <div class="form-floating mb-3">
-          <input
-            type="text"
-            class="form-control"
-            id="field-4be9134b3734056"
-            placeholder="Address"
-            name="field-4be9134b3734056"
-          />
-          <label for="field-4be9134b3734056">Address</label>
+      </div>
+      <div class="row text-center pt-3 mx-auto">
+        <div class="col">
+          <strong>Special service Ash Wednesday at 7:00 PM</strong>
         </div>
-        <div class="form-floating mb-3">
-          <input
-            type="text"
-            class="form-control"
-            id="email"
-            placeholder="Email Address"
-            name="email"
-          />
-          <label for="email">Email Address</label>
+      </div>
+      <div class="row text-center pt-3 mx-auto">
+        <div class="col">
+          <img class="w-50" src="./images/congregation2.jpg" />
         </div>
-        <div class="form-floating mb-3">
-          <input
-            type="text"
-            class="form-control"
-            id="field-96b2c9af1499026"
-            placeholder="Phone"
-            name="field-96b2c9af1499026"
-          />
-          <label for="field-96b2c9af1499026">Phone</label>
-        </div>
-        <div class="form-floating mb-3">
-          <textarea
-            class="form-control"
-            placeholder="What would you like more information about"
-            id="field-469dd9a5020b020"
-            name="field-469dd9a5020b020"
-            style="height: 150px"
-          ></textarea>
-          <label for="field-469dd9a5020b020">Information You Need</label>
-        </div>
-
-        <button class="btn btn-primary w-100" type="submit">Submit form</button>
-      </form>
+      </div>
     </div>
-
     <!-- Start Footer -->
     <footer class="pt-5 mb-sm-0 mb-md-3 mb-lg-3 container mx-auto p-0 bg">
       <!-- Footer row -->
