--- a/calendar.html
+++ b/calendar.html
@@ -129,9 +129,11 @@
     <!-- End Navbar -->
 
     <div class="px-3 container mx-auto bg">
-      <div class="row pt-5 mx-auto"></div>
-      <h2>Church Calendar</h2>
-      <hr />
+      <div class="row pt-5 mx-auto text-center">
+        <h1>Church Calendar</h1>
+        <hr />
+      </div>
+
       <div class="row mx-auto">
         <iframe
           src="//www.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23cccccc&amp;src=9k15r4oj9pihte8nr4s3ra7qag%40group.calendar.google.com&amp;color=%23BE6D00&amp;src=a8so3okd24r3jbjr546tastrg0%40group.calendar.google.com&amp;color=%234A716C&amp;src=5cm43rq8vd82m98u7odb5jjmas%40group.calendar.google.com&amp;color=%23A32929&amp;src=en.usa%23holiday%40group.v.calendar.google.com&amp;color=%232952A3&amp;ctz=America%2FChicago"
