--- a/education.html
+++ b/education.html
@@ -1,30 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
     <!-- Required Scripts -->
+    <!-- Importing JavaScript files for navbar functionality -->
     <script src="navbar.js" defer></script>
-    <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Importing Bootstrap library for enhanced styling and functionality -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- End Scripts -->
+
     <!-- Required Stylesheets -->
+    <!-- Importing Bootstrap CSS for styling -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     />
+    <!-- Custom CSS for additional styling -->
     <link rel="stylesheet" href="./index.css" />
     <!-- End Stylesheets -->
+
+    <!-- Meta tags -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Van Meter United Methodist Church</title>
   </head>
+
+  <!-- Body starts here -->
   <body>
-    <!-- Banner -->
+    <!-- Banner section -->
     <div class="mt-sm-0 mt-md-3 mt-lg-3 container mx-auto p-0">
       <img class="w-100" src="./images/websitebanner.jpg" />
     </div>
     <!-- End Banner -->
-    <!-- Navbar -->
+
+    <!-- Navbar section -->
     <div class="container mx-auto p-0">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow">
+        <!-- Navbar toggler for smaller screens -->
         <button
           class="navbar-toggler"
           type="button"
@@ -37,14 +48,18 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
+        <!-- Navbar content -->
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+          <!-- Navbar links -->
           <ul class="navbar-nav mx-auto mt-2 mt-lg-0">
+            <!-- Navigation links -->
             <li class="nav-item">
               <a class="nav-link" href="/index.html"> Home </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/kidscare.html"> Kids Care </a>
             </li>
+            <!-- Dropdown menu for 'Our Church' section -->
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
@@ -56,6 +71,7 @@
               >
                 Our Church
               </a>
+              <!-- Dropdown menu items -->
               <div
                 class="dropdown-menu dropdown-menu-dark bg-dark shadow"
                 aria-labelledby="dropdown08"
@@ -78,14 +94,13 @@
                 </a>
               </div>
             </li>
-
+            <!-- Additional navigation links -->
             <li class="nav-item">
               <a class="nav-link" href="/worship.html"> Worship </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/ministries.html"> Ministries </a>
             </li>
-
             <li class="nav-item">
               <a class="nav-link" href="/photos.html"> Photos </a>
             </li>
@@ -95,6 +110,7 @@
             <li class="nav-item">
               <a class="nav-link" href="/publications.html"> Publications </a>
             </li>
+            <!-- Dropdown menu for 'Contact Us' section -->
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
@@ -106,6 +122,7 @@
               >
                 Contact Us
               </a>
+              <!-- Dropdown menu items -->
               <div
                 class="dropdown-menu dropdown-menu-dark bg-dark shadow"
                 aria-labelledby="dropdown08"
@@ -128,87 +145,46 @@
     </div>
     <!-- End Navbar -->
 
-    <div class="px-3 text-center container mx-auto bg">
-      <div class="row mx-auto text-center pt-5">
-        <h1>Information Request Form</h1>
+    <div class="container mx-auto px-3 bg">
+      <!-- Content sections -->
+      <!-- Row with padding top 5 and centered content -->
+      <div class="row pt-5 mx-auto">
+        <div class="col text-center">
+          <h1>Bringing Us Closer to God</h1>
+        </div>
       </div>
-
-      <hr />
-      <form
-        enctype="multipart/form-data"
-        method="post"
-        action="http://www.response-o-matic.com/mail.php"
-        accept-charset="UTF-8"
-      >
-        <div>
-          <input
-            type="hidden"
-            name="acctid"
-            id="acctid"
-            value="u7p9qzi9dh3ql0yy"
-          />
-          <input type="hidden" name="formid" id="formid" value="799931" />
-          <input
-            type="hidden"
-            name="required_vars"
-            id="required_vars"
-            value="name,field-4be9134b3734056,field-96b2c9af1499026,field-469dd9a5020b020"
-          />
+      <div class="row text-center pt-3 mx-auto">
+        <div class="col text-center">
+          <h3>Christian Education</h3>
         </div>
-        <div class="form-floating mb-3">
-          <input
-            type="text"
-            class="form-control"
-            id="name"
-            placeholder="Name"
-          />
-          <label for="name">Name</label>
+      </div>
+      <div class="row pt-3 mx-auto">
+        <div class="col-lg-7 align-self-center">
+          <div class="row">
+            <p>
+              Our <strong>Adult Discussion Group</strong> meets at
+              <strong>9:30 AM</strong> each Sunday in the overflow area at the
+              back of the sanctuary. We usually take a break for the summer.
+            </p>
+          </div>
+          <div class="row">
+            <p>
+              Our <strong>Wednesday program, J.A.M.</strong> (Jesus and Me), is
+              designed for elementary-age children to learn the love of Jesus
+              while having fun. It is held (almost) every Wednesday through the
+              school year, a dinner followed by an hour of fun learning.
+              <a href="/JAM.html">Learn more here.</a>
+            </p>
+          </div>
         </div>
-        <div class="form-floating mb-3">
-          <input
-            type="text"
-            class="form-control"
-            id="field-4be9134b3734056"
-            placeholder="Address"
-            name="field-4be9134b3734056"
-          />
-          <label for="field-4be9134b3734056">Address</label>
+        <div class="col-lg-5 text-center">
+          <img class="w-75" src="./images/JAM_logo_black.jpg" />
         </div>
-        <div class="form-floating mb-3">
-          <input
-            type="text"
-            class="form-control"
-            id="email"
-            placeholder="Email Address"
-            name="email"
-          />
-          <label for="email">Email Address</label>
-        </div>
-        <div class="form-floating mb-3">
-          <input
-            type="text"
-            class="form-control"
-            id="field-96b2c9af1499026"
-            placeholder="Phone"
-            name="field-96b2c9af1499026"
-          />
-          <label for="field-96b2c9af1499026">Phone</label>
-        </div>
-        <div class="form-floating mb-3">
-          <textarea
-            class="form-control"
-            placeholder="What would you like more information about"
-            id="field-469dd9a5020b020"
-            name="field-469dd9a5020b020"
-            style="height: 150px"
-          ></textarea>
-          <label for="field-469dd9a5020b020">Information You Need</label>
-        </div>
-
-        <button class="btn btn-primary w-100" type="submit">Submit form</button>
-      </form>
+      </div>
+      <div class="row mx-auto pt-5 text-center">
+        <i><b>~Miss Courtney, Director of Children's Ministries</b></i>
+      </div>
     </div>
-
     <!-- Start Footer -->
     <footer class="pt-5 mb-sm-0 mb-md-3 mb-lg-3 container mx-auto p-0 bg">
       <!-- Footer row -->
